added game music and sound effects

--- a/MakeFile
+++ b/MakeFile
@@ -1,2 +1,2 @@
 all:
-	g++ -Iinclude -Iinclude/sdl2 -Iinclude/headers -Llib -o Main src/*.cpp -lmingw32 -lSDL2main -lSDL2 -lSDL2_image
+	g++ -Iinclude -Iinclude/sdl2 -Iinclude/headers -Llib -o Main src/*.cpp -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer
